--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Coffee Time</title>
-    <meta name="description" content="Simple starter webpack 5 project template boilerplate supporting SASS/PostCSS, Babel ES7, browser syncing, code linting. Easy project setup having multiple features and developer friendly tools.">
+    <meta name="description" content="Coffee Drinks web application to offer different coffee drinks.">
     <meta name="keywords" content="webpack, webpack-configuration, template, boilerplate, setup, html, css, sass, javascript">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="Plamen Nikolov, WeAreAthlon">
   </head>
   <body>
     <header>
@@ -14,7 +13,8 @@
     </header>
     <main>
       <h2 id="continuous-integration">List of coffee drinks</h2>
-	  <ul id="list-of-coffee-drinks"></ul>
+	  <ul id="list-of-coffee-drinks">
+	  </ul>
     </main>
     <footer>
       
