add: image of espresso example

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 	     and roast degrees. Espresso is the most common way of making coffee in southern Europe, especially in Italy,
 	      Spain, Portugal, Switzerland, Southern France and Bulgaria.
 	      </p>
-	  
+	  <img src="images/content/espresso.jpg" width="350" height="350" />
     </main>
     <footer>
       
