add: order button

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,8 @@
 	  
     </main>
     <footer>
-      
+      <button id="btn_orderCoffeeDrink">Order</button>
+      <p id="output_result"></p>
     </footer>
   </body>
 </html>
