add: main pages of the web app

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       <h1>Coffee Time</h1>
     </header>
     <main>
+		<a href="./order.html">Make Order</a>
 	  <p><h3>Espresso</h3></p>
 	  <hr />
 	  <p>Espresso (/ɛˈsprɛsoʊ/, Italian: [eˈsprɛsso]) is a coffee-brewing method of Italian origin,
@@ -46,11 +47,8 @@
 	      portion to dark, brewed coffee (today mostly espresso).
 	       The physical appearance of a modern cappuccino with espresso
 	        créma and steamed milk is a result of a long evolution of the drink.</p>
-	  
     </main>
     <footer>
-      <button id="btn_orderCoffeeDrink">Order</button>
-      <p id="output_result"></p>
     </footer>
   </body>
 </html>
