add: list of coffee drinks in Coffee class

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,7 @@
 	        créma and steamed milk is a result of a long evolution of the drink.</p>
     </main>
     <footer>
+		<div id="coffeeList"></div>
     </footer>
   </body>
 </html>
