add: few types of coffee drinks to the list

--- a/src/order.html
+++ b/src/order.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Coffee Drinks web application to offer different coffee drinks.">
     <meta name="keywords" content="webpack, webpack-configuration, template, boilerplate, setup, html, css, sass, javascript">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="js/coffee.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body>
     <header>
@@ -13,6 +15,7 @@
     </header>
     <main>
 	  <button id="btn_orderCoffeeDrink">Order</button>
+	  <p>extra info</p>
       <p id="output_result"></p>
     </main>
     <footer>
