add: contact form in ContactUs page

--- a/src/contactUs.html
+++ b/src/contactUs.html
@@ -12,7 +12,19 @@
       <h1>Contact us</h1>
     </header>
     <main>
-	  <!-- to do -->
+	  <form>
+		  <label><b>First Name:</b><br/>
+		  <input type="text" id="fname" name="fname"><br />
+		  </label>
+		  <label><b>Last Name:</b><br/>
+		  <input type="text" id="lname" name="lname"><br />
+		  </label>
+		  <label><b>E-mail:</b><br/>
+			  <input type="text" id="email" name="email"><br />
+		  </label>
+		  <label><input type="submit" value="Submit"></label>
+		
+	  </form>
     </main>
     <footer>
 		
