--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     </header>
     <main>
 		<a href="./order.html">Make Order</a>
+		<a href="./contactUs.html">Contact Us</a>
 	  <p><h3>Espresso</h3></p>
 	  <hr />
 	  <p>Espresso (/ɛˈsprɛsoʊ/, Italian: [eˈsprɛsso]) is a coffee-brewing method of Italian origin,
