add: image of coffee brewing

--- a/src/brewing.html
+++ b/src/brewing.html
@@ -20,6 +20,8 @@
 	      through the ground coffee, absorbing its constituent chemical compounds, and then passes 
 	      through a filter. The used coffee grounds are retained in the filter, while the brewed
 	       coffee is collected in a vessel such as a carafe or pot. </p>
+	       <hr>
+	       <p><img src="images/content/brewing.jpg" width="350" height="350" /></p>
     </main>
     <footer>
 		
