add: profile page options

--- a/src/profile.html
+++ b/src/profile.html
@@ -12,6 +12,10 @@
       <h1>User Profile</h1>
     </header>
     <main>
+		<p>Choose your favorite coffee drink: </p>
+		<select>
+		<!-- to do ( generating list of coffee drinks in profile page -->
+		</select>
 	  <select>
 		<option value="">Select...</option>
 		<option value="add_coffee">Add</option>
