add: list of pages for the sitemap

--- a/src/sitemap.html
+++ b/src/sitemap.html
@@ -13,6 +13,10 @@
     </header>
     <main>
 	  <!-- to do -->
+	  <p>List of all pages</p>
+	  <ul>
+		<li></li>
+	  </ul>
     </main>
     <footer>
 		
