--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,23 @@
     <meta name="description" content="Coffee Drinks web application to offer different coffee drinks.">
     <meta name="keywords" content="webpack, webpack-configuration, template, boilerplate, setup, html, css, sass, javascript">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+
+	@import url('https://fonts.googleapis.com/css2?family=Ephesis&display=swap');
+	
+	header > h1 {
+		font-family: "Ephesis", sans-serif;
+		font-size: 54px;
+	}
+	
+	h3 {
+		font-family: "Ephesis", sans-serif;
+	}
+	</style>
   </head>
   <body>
     <header>
-      <h1>Coffee Time</h1>
+      <h1>Coffee  Time</h1>
     </header>
     <main>
 		<a href="./order.html">Make Order</a>
