add: fonts and coffee icon

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Coffee Drinks web application to offer different coffee drinks.">
     <meta name="keywords" content="webpack, webpack-configuration, template, boilerplate, setup, html, css, sass, javascript">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/2f3252152f.js" crossorigin="anonymous"></script>
     <style>
 
 	@import url('https://fonts.googleapis.com/css2?family=Ephesis&display=swap');
@@ -50,7 +51,7 @@
 	         in German Milchkaffee or (in Austria) Wiener Melange. </p>
 	  <p><img src="images/content/latte.jpg" width="350" height="350" /></p>
 	  <hr />
-	  <p><h3>Cappuccino</h3></p>
+	  <p><i class="fa-solid fa-mug-hot"></i><h3>Cappuccino</h3></p>
 	  <hr />
 	  <p>Variations of the drink involve the use of cream instead of milk,
 	   using non-dairy milk substitutes and flavoring with cinnamon or chocolate powder.
