feat: added title update for profile

--- a/src/profile.html
+++ b/src/profile.html
@@ -26,5 +26,12 @@
     <footer>
 		
     </footer>
+    <script defer>
+    
+    setTimeout(() => {
+		document.querySelector('title').innerHTML = "Your profile";
+		}, 3000);
+    
+    </script>
   </body>
 </html>
