--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Coffee Drinks web application to offer different coffee drinks.">
     <meta name="keywords" content="webpack, webpack-configuration, template, boilerplate, setup, html, css, sass, javascript">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <script src="https://kit.fontawesome.com/2f3252152f.js" crossorigin="anonymous"></script>
     <style>
 
@@ -19,16 +20,27 @@
 	h3 {
 		font-family: "Ephesis", sans-serif;
 	}
+	
+	main > p > img {
+		padding: 10px;
+		text-align: center;
+	}
 	</style>
   </head>
   <body>
     <header>
-      <h1>Coffee  Time</h1>
+      <h1>Coffee Time</h1>
     </header>
     <main>
-		<a href="./order.html">Make Order</a>
-		<a href="./contactUs.html">Contact Us</a>
-	  <p><h3>Espresso</h3></p>
+	<p style="text-align: center">
+		<a href="./index.html">Home</a> | 
+		<a href="./order.html">Make Order</a> | 
+		<a href="./categories.html">Categories</a> | 
+		<a href="./contactUs.html">Contact Us</a> | 
+		<a href="./aboutUs.html">About Us</a>
+	</p>
+	<hr />
+	  <p><h3><i class="fas fa-coffee"></i> Espresso</h3></p>
 	  <hr />
 	  <p>Espresso (/ɛˈsprɛsoʊ/, Italian: [eˈsprɛsso]) is a coffee-brewing method of Italian origin,
 	   in which a small amount of nearly boiling water (about 90 °C or 190 °F) is forced under 9–10 bars (900–1,000 kPa; 130–150 psi)
@@ -39,7 +51,7 @@
 	      <hr />
 	  <p><img src="images/content/espresso.jpg" width="350" height="350" /></p>
 	  <hr />
-	  <p><h3>Latte</h3></p>
+	  <p><h3><i class="fas fa-coffee"></i> Latte</h3></p>
 	  <hr />
 	  <p>The term comes from the Italian caffellatte or caffè latte, from caffè e latte,
 	   literally "coffee and milk"; in English orthography either or both words sometimes have
@@ -48,10 +60,9 @@
 	      the term café au lait has traditionally been used for the combination of espresso and milk.
 	       In France, café latte is from the original name of the drink (caffè latte); a combination
 	        of espresso and steamed milk equivalent to a "latte" is in French called grand crème and
-	         in German Milchkaffee or (in Austria) Wiener Melange. </p>
-	  <p><img src="images/content/latte.jpg" width="350" height="350" /></p>
+	         in German Milchkaffee or (in Austria) Wiener Melange. <img src="images/content/latte.jpg" width="350" height="350" /></p>
 	  <hr />
-	  <p><i class="fa-solid fa-mug-hot"></i><h3>Cappuccino</h3></p>
+	  <p><h3><i class="fas fa-coffee"></i>Cappuccino</h3></p>
 	  <hr />
 	  <p>Variations of the drink involve the use of cream instead of milk,
 	   using non-dairy milk substitutes and flavoring with cinnamon or chocolate powder.
