add: profile icon

--- a/src/profile.html
+++ b/src/profile.html
@@ -6,12 +6,15 @@
     <meta name="description" content="Coffee Drinks web application to offer different coffee drinks.">
     <meta name="keywords" content="webpack, webpack-configuration, template, boilerplate, setup, html, css, sass, javascript">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/2f3252152f.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-      <h1>User Profile</h1>
+      <h1><i class="fas fa-user"></i>User Profile</h1>
     </header>
     <main>
+		
+		
 		<p>Choose your favorite coffee drink: </p>
 		<select>
 		<!-- to do ( generating list of coffee drinks in profile page -->
