add: coffee mug icon to Brewing header

--- a/src/brewing.html
+++ b/src/brewing.html
@@ -6,13 +6,14 @@
     <meta name="description" content="Coffee Drinks web application to offer different coffee drinks.">
     <meta name="keywords" content="webpack, webpack-configuration, template, boilerplate, setup, html, css, sass, javascript">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <script src="https://kit.fontawesome.com/2f3252152f.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-      <h1>Coffee Brewing</h1>
+      <h1><i class="fas fa-mug-hot"></i> Coffee Brewing</h1>
     </header>
     <main>
-	  <!-- to do -->
 	  <p>Brewed coffee is made by pouring hot water onto ground coffee beans, then allowing to brew.
 	   There are several methods for doing this, including using a filter, a percolator, and a French press.
 	    Terms used for the resulting coffee often reflect the method used, such as drip brewed coffee,
