--- a/src/contactUs.html
+++ b/src/contactUs.html
@@ -6,24 +6,27 @@
     <meta name="description" content="Coffee Drinks web application to offer different coffee drinks.">
     <meta name="keywords" content="webpack, webpack-configuration, template, boilerplate, setup, html, css, sass, javascript">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+		main > form {
+			display: block;
+			margin: 10px 0;
+		}
+    </style>
   </head>
   <body>
     <header>
       <h1>Contact us</h1>
     </header>
     <main>
-	  <form>
-		  <label><b>First Name:</b><br/>
-		  <input type="text" id="fname" name="fname"><br />
-		  </label>
-		  <label><b>Last Name:</b><br/>
-		  <input type="text" id="lname" name="lname"><br />
-		  </label>
-		  <label><b>E-mail:</b><br/>
-			  <input type="text" id="email" name="email"><br />
-		  </label>
-		  <label><input type="submit" value="Submit"></label>
-		
+		<!-- to do -->
+	  <form action="index.html" method="POST">
+		  <label><b>First Name:</b></label><br />
+		  <input type="text" id="fname" name="fname" required autofocus />
+		  <label><b>Last Name:</b></label><br />
+		  <input type="text" id="lname" name="lname" required />
+		  <label><b>E-mail:</b></label><br />
+			  <input type="email" id="email" name="email" required>
+		  <input type="submit" value="Submit">
 	  </form>
     </main>
     <footer>
