--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
     <main>
 	<p style="text-align: center">
 		<a href="./index.html">Home</a> | 
+		<a href="./login.html">Login</a> | 
 		<a href="./order.html">Make Order</a> | 
 		<a href="./categories.html">Categories</a> | 
 		<a href="./contactUs.html">Contact Us</a> | 
