add: registration form and few changes to navigation

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
 	<p style="text-align: center">
 		<a href="./index.html">Home</a> | 
 		<a href="./login.html">Login</a> | 
-		<a href="./order.html">Make Order</a> | 
+		<a href="./registration.html">Register</a> | 
 		<a href="./categories.html">Categories</a> | 
 		<a href="./contactUs.html">Contact Us</a> | 
 		<a href="./aboutUs.html">About Us</a>
