--- a/src/registration.html
+++ b/src/registration.html
@@ -25,6 +25,13 @@
 		padding: 10px;
 		text-align: center;
 	}
+	
+	form > input {
+		display: block;
+		margin: 10px;
+		padding: 5px;
+	}
+	
 	</style>
   </head>
   <body>
@@ -40,7 +47,7 @@
 		<a href="./aboutUs.html">About Us</a>
 	</p>
 	<hr />
-	  <p> Registration form </p>
+	  <p><i class="fas fa-user-circle"></i>Make your registration</p>
 	  <p>
 	  <form action="registration.html" method="POST">
 		<input type="text" name="fname" placeholder="Your first name" autofocus />
