add: sitemap on the footer

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 	        créma and steamed milk is a result of a long evolution of the drink.</p>
     </main>
     <footer>
-		<div id="coffeeList"></div>
+		<a href="./sitemap.html">Sitemap</a>
     </footer>
   </body>
 </html>
