add: login form

--- a/src/login.html
+++ b/src/login.html
@@ -29,18 +29,17 @@
   </head>
   <body>
     <header>
-      <h1>Coffee Time</h1>
+      <h1>Login</h1>
     </header>
     <main>
 	<p style="text-align: center">
 		<a href="./index.html">Home</a> | 
-		<a href="./registration.html">No Registration</a> | 
+		<a href="./registration.html">Registration</a> | 
 		<a href="./categories.html">Categories</a> | 
 		<a href="./contactUs.html">Contact Us</a> | 
 		<a href="./aboutUs.html">About Us</a>
 	</p>
 	<hr />
-	  <p> Login form </p>
 	  <p>
 	  <form action="login.html" method="POST">
 		<input type="text" name="username" placeholder="Your username" required autofocus />
