--- a/src/profile.html
+++ b/src/profile.html
@@ -13,11 +13,13 @@
       <h1><i class="fas fa-user"></i>User Profile</h1>
     </header>
     <main>
-		
-		
+		<p>User options:</p>
+		<p>settings</p>
+		<p>delete profile</p>
+		<p>restore password</p>
 		<p>Choose your favorite coffee drink: </p>
 		<select>
-		<!-- to do ( generating list of coffee drinks in profile page -->
+		<!-- to do ( generating list of coffee drinks in profile page ) -->
 		</select>
 	  <select>
 		<option value="">Select...</option>
