add: index and brewing navigation

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
 	        créma and steamed milk is a result of a long evolution of the drink.</p>
     </main>
     <footer>
-		<a href="./sitemap.html">Sitemap</a>
+		<a href="./sitemap.html">Sitemap</a> | <a href="./brewing.html">Coffee Brewing</a>
     </footer>
   </body>
 </html>
