--- a/src/brewing.html
+++ b/src/brewing.html
@@ -11,18 +11,22 @@
   </head>
   <body>
     <header>
+	  <a href="../index.html">back</a>
       <h1><i class="fas fa-mug-hot"></i> Coffee Brewing</h1>
     </header>
     <main>
 	  <p>Brewed coffee is made by pouring hot water onto ground coffee beans, then allowing to brew.
 	   There are several methods for doing this, including using a filter, a percolator, and a French press.
 	    Terms used for the resulting coffee often reflect the method used, such as drip brewed coffee,
-	     filtered coffee, pour-over coffee, immersion brewed coffee, or simply coffee. Water seeps
-	      through the ground coffee, absorbing its constituent chemical compounds, and then passes 
-	      through a filter. The used coffee grounds are retained in the filter, while the brewed
-	       coffee is collected in a vessel such as a carafe or pot. </p>
-	       <hr>
+	     filtered coffee, pour-over coffee, immersion brewed coffee, or simply coffee.</p>
+	       <hr />
 	       <p><img src="images/content/brewing.jpg" width="350" height="350" /></p>
+	       <hr />
+	       <p>
+	       Water seeps through the ground coffee, absorbing its constituent chemical compounds, and then passes 
+	      through a filter. The used coffee grounds are retained in the filter, while the brewed
+	       coffee is collected in a vessel such as a carafe or pot.
+	       </p>
     </main>
     <footer>
 		
