--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,16 @@
       <h1>Coffee Time</h1>
     </header>
     <main>
-	<p style="text-align: center">
-		<a href="./index.html">Home</a> | 
-		<a href="./login.html">Login</a> | 
-		<a href="./registration.html">Register</a> | 
-		<a href="./categories.html">Categories</a> | 
-		<a href="./contactUs.html">Contact Us</a> | 
-		<a href="./aboutUs.html">About Us</a>
-	</p>
+	<navbar>
+		<p>
+			<a href="./index.html">Home</a> | 
+			<a href="./login.html">Login</a> | 
+			<a href="./registration.html">Register</a> | 
+			<a href="./categories.html">Categories</a> | 
+			<a href="./contactUs.html">Contact Us</a> | 
+			<a href="./aboutUs.html">About Us</a>
+		</p>
+	</navbar>
 	<hr />
 	  <p><h3><i class="fas fa-coffee"></i> Espresso</h3></p>
 	  <hr />
