feat: change navbar

--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,11 @@
     <main>
 	<navbar>
 		<p>
-			<a href="./index.html">Home</a> | 
-			<a href="./login.html">Login</a> | 
-			<a href="./registration.html">Register</a> | 
-			<a href="./categories.html">Categories</a> | 
-			<a href="./contactUs.html">Contact Us</a> | 
+			<a href="./index.html">Home</a>
+			<a href="./login.html">Login</a>
+			<a href="./registration.html">Register</a>
+			<a href="./categories.html">Categories</a>
+			<a href="./contactUs.html">Contact Us</a>
 			<a href="./aboutUs.html">About Us</a>
 		</p>
 	</navbar>
