add: basket icon

--- a/src/profile.html
+++ b/src/profile.html
@@ -13,6 +13,7 @@
       <h1><i class="fas fa-user"></i>User Profile</h1>
     </header>
     <main>
+		<i class="fas fa-shopping-basket"></i>
 		<p>User options:</p>
 		<p>settings</p>
 		<p>delete profile</p>
