add: commenting index page

--- a/src/index.html
+++ b/src/index.html
@@ -210,7 +210,7 @@ img {
 	     and in this context referring to the colour of the beverage when milk is added in small
 	      portion to dark, brewed coffee (today mostly espresso).
 	       The physical appearance of a modern cappuccino with espresso
-	        créma and steamed milk is a result of a long evolution of the drink.</p>
+	        créma and steamed milk is a result of a long evolution of the drink.</p><!-- Text sliding ( 3 slides for each type of coffee ) -->
     </main>
     <footer>
 		<a href="./sitemap.html">Sitemap</a> | <a href="./brewing.html">Coffee Brewing</a>
